# FFmpegVideo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ffmpeg/maikel/video/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/ffmpeg/maikel/video/bean/: SurpportedSize.java
app/src/main/java/com/ffmpeg/maikel/video/presenter/: BasePresenter.java  CameraPresenter.java
app/src/main/java/com/ffmpeg/maikel/video/presenter/impl/: CameraPresenterImpl.java
app/src/main/java/com/ffmpeg/maikel/video/ui/: FloatActivity.java  MainActivity.java
app/src/main/java/com/ffmpeg/maikel/video/ui/presenter/: BaseView.java  MainViewPresenter.java
app/src/main/java/com/ffmpeg/maikel/video/utils/: CameraUtils.java  GenerateValuesFiles.java  ScreenUtils.java
app/src/main/java/com/ffmpeg/maikel/video/video/: VideoFrameCallback.java
app/src/main/java/com/ffmpeg/maikel/video/widget/: CameraView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/ffmpeg/maikel/video/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
